.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:44:54 **** Rebuild of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorld.o" "..\\src\\HelloWorld.cpp" 
g++ -o HelloWorld.exe "src\\HelloWorld.o" 
17:45:14 **** Incremental Build of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorld.o" "..\\src\\HelloWorld.cpp" 
g++ -o HelloWorld.exe "src\\HelloWorld.o" 
Info: Nothing to build for HelloWorld
Info: Nothing to build for HelloWorld
17:49:15 **** Incremental Build of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorld.o" "..\\src\\HelloWorld.cpp" 
g++ -o HelloWorld.exe "src\\HelloWorld.o" 
Info: Nothing to build for HelloWorld
Info: Nothing to build for HelloWorld
Info: Nothing to build for HelloWorld
Info: Nothing to build for HelloWorld
15:57:30 **** Incremental Build of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorld.o" "..\\src\\HelloWorld.cpp" 
g++ -o HelloWorld.exe "src\\HelloWorld.o" 
Info: Nothing to build for FirstProject
11:36:03 **** Incremental Build of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\SpeicherbedarfPrimTypen.o" "..\\src\\SpeicherbedarfPrimTypen.cpp" 
..\src\SpeicherbedarfPrimTypen.cpp:12:11: error: '::main' must return 'int'
 void main(){
           ^
Info: Nothing to build for FirstProject
11:36:35 **** Incremental Build of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\SpeicherbedarfPrimTypen.o" "..\\src\\SpeicherbedarfPrimTypen.cpp" 
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorld.o" "..\\src\\HelloWorld.cpp" 
g++ -o HelloWorld.exe "src\\HelloWorld.o" "src\\SpeicherbedarfPrimTypen.o" 
src\SpeicherbedarfPrimTypen.o: In function `main':
C:\Users\Davina\workspacecpp\HelloWorld\Debug/../src/SpeicherbedarfPrimTypen.cpp:12: multiple definition of `main'
src\HelloWorld.o:C:\Users\Davina\workspacecpp\HelloWorld\Debug/../src/HelloWorld.cpp:12: first defined here
collect2.exe: error: ld returned 1 exit status
11:38:01 **** Incremental Build of configuration Debug for project FirstProject ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o SpeicherbedarfPrimTypen.o "..\\SpeicherbedarfPrimTypen.cpp" 
..\SpeicherbedarfPrimTypen.cpp:2:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
g++ -o FirstProject.exe SpeicherbedarfPrimTypen.o 
11:38:04 **** Incremental Build of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -o HelloWorld.exe "src\\HelloWorld.o" "src\\SpeicherbedarfPrimTypen.o" 
src\SpeicherbedarfPrimTypen.o: In function `main':
C:\Users\Davina\workspacecpp\HelloWorld\Debug/../src/SpeicherbedarfPrimTypen.cpp:12: multiple definition of `main'
src\HelloWorld.o:C:\Users\Davina\workspacecpp\HelloWorld\Debug/../src/HelloWorld.cpp:12: first defined here
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for FirstProject
11:39:38 **** Incremental Build of configuration Debug for project FirstProject ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o SpeicherbedarfPrimTypen.o "..\\SpeicherbedarfPrimTypen.cpp" 
..\SpeicherbedarfPrimTypen.cpp:2:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
g++ -o FirstProject.exe SpeicherbedarfPrimTypen.o 
11:39:40 **** Incremental Build of configuration Debug for project HelloWorld ****
Info: Internal Builder is used for build
g++ -o HelloWorld.exe "src\\HelloWorld.o" 
Info: Nothing to build for FirstProject
Info: Nothing to build for HelloWorld
11:52:56 **** Rebuild of configuration Debug for project Lesson2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "class_example_split\\class_example_split.o" "..\\class_example_split\\class_example_split.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "point\\point.o" "..\\point\\point.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "class_example_compact\\class_example_compact.o" "..\\class_example_compact\\class_example_compact.cpp" 
g++ -o Lesson2.exe "class_example_compact\\class_example_compact.o" "class_example_split\\class_example_split.o" "point\\point.o" 
c:/mingw/bin/../lib/gcc/mingw32/5.3.0/../../../libmingw32.a(main.o):(.text.startup+0xa0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for FirstProject
13:21:59 **** Rebuild of configuration Debug for project GGT ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o utility.o "..\\utility.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
g++ -o GGT.exe main.o utility.o 
Info: Nothing to build for HelloWorld
13:22:01 **** Incremental Build of configuration Debug for project Lesson2 ****
Info: Internal Builder is used for build
g++ -o Lesson2.exe "class_example_compact\\class_example_compact.o" "class_example_split\\class_example_split.o" "point\\point.o" 
c:/mingw/bin/../lib/gcc/mingw32/5.3.0/../../../libmingw32.a(main.o):(.text.startup+0xa0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for GGT
13:23:37 **** Incremental Build of configuration Debug for project GGT ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
g++ -o GGT.exe main.o utility.o 
13:24:41 **** Incremental Build of configuration Debug for project GGT ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
g++ -o GGT.exe main.o utility.o 
